[project]
name = "nxcypher"
version = "0.1.0"
description = "A lightweight Cypher‑like query engine for NetworkX graphs"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "lark>=1.3.1",
    "networkx>=3.5",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
# Ensure the project root is on the Python path so that `import nxcypher` works.
pythonpath = ["."]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "black>=25.11.0",
    "pytest-cov>=7.0.0",
    "pytest[cov]>=9.0.0",
    "ruff>=0.14.4",
]
